--- a/alarmcn/julia-git-precompiled-packages/lilac.yaml
+++ b/alarmcn/julia-git-precompiled-packages/lilac.yaml
@@ -105,6 +105,8 @@ update_on:
   - alias: alpm-lilac
     alpm: julia-git-blockbandedmatrices-src
   - alias: alpm-lilac
+    alpm: julia-git-blockdiagonals-src
+  - alias: alpm-lilac
     alpm: julia-git-blosc-src
   - alias: alpm-lilac
     alpm: julia-git-blosc_jll-src
@@ -330,6 +332,8 @@ update_on:
     alpm: julia-git-fillarrays-src
   - alias: alpm-lilac
     alpm: julia-git-finitediff-src
+  - alias: alpm-lilac
+    alpm: julia-git-finitedifferences-src
   - alias: alpm-lilac
     alpm: julia-git-fixedpointnumbers-src
   - alias: alpm-lilac
@@ -921,6 +925,8 @@ update_on:
   - alias: alpm-lilac
     alpm: julia-git-revise-src
   - alias: alpm-lilac
+    alpm: julia-git-richardson-src
+  - alias: alpm-lilac
     alpm: julia-git-rmath-src
   - alias: alpm-lilac
     alpm: julia-git-rmath_jll-src
@@ -1024,6 +1030,8 @@ update_on:
     alpm: julia-git-stridearrayscore-src
   - alias: alpm-lilac
     alpm: julia-git-strided-src
+  - alias: alpm-lilac
+    alpm: julia-git-stridedviews-src
   - alias: alpm-lilac
     alpm: julia-git-stringdistances-src
   - alias: alpm-lilac
