--- a/archlinuxcn/julia-git-packages-meta/lilac.yaml
+++ b/archlinuxcn/julia-git-packages-meta/lilac.yaml
@@ -38,6 +38,7 @@ update_on_build:
   - pkgbase: julia-git-bittwiddlingconveniencefunctions-src
   - pkgbase: julia-git-blockarrays-src
   - pkgbase: julia-git-blockbandedmatrices-src
+  - pkgbase: julia-git-blockdiagonals-src
   - pkgbase: julia-git-blosc-src
   - pkgbase: julia-git-blosc_jll-src
   - pkgbase: julia-git-boundaryvaluediffeq-src
@@ -151,6 +152,7 @@ update_on_build:
   - pkgbase: julia-git-filepathsbase-src
   - pkgbase: julia-git-fillarrays-src
   - pkgbase: julia-git-finitediff-src
+  - pkgbase: julia-git-finitedifferences-src
   - pkgbase: julia-git-fixedpointnumbers-src
   - pkgbase: julia-git-flamegraphs-src
   - pkgbase: julia-git-foldingtrees-src
@@ -440,6 +442,7 @@ update_on_build:
   - pkgbase: julia-git-resettablestacks-src
   - pkgbase: julia-git-reversediff-src
   - pkgbase: julia-git-revise-src
+  - pkgbase: julia-git-richardson-src
   - pkgbase: julia-git-rmath-src
   - pkgbase: julia-git-rmath_jll-src
   - pkgbase: julia-git-roots-src
@@ -490,6 +493,7 @@ update_on_build:
   - pkgbase: julia-git-stochasticdiffeq-src
   - pkgbase: julia-git-stridearrayscore-src
   - pkgbase: julia-git-strided-src
+  - pkgbase: julia-git-stridedviews-src
   - pkgbase: julia-git-stringdistances-src
   - pkgbase: julia-git-stringencodings-src
   - pkgbase: julia-git-stringmanipulation-src
