--- a/archlinuxcn/julia-git-precompiled-packages/lilac.yaml
+++ b/archlinuxcn/julia-git-precompiled-packages/lilac.yaml
@@ -75,6 +75,7 @@ repo_depends:
   - julia-git-bittwiddlingconveniencefunctions-src
   - julia-git-blockarrays-src
   - julia-git-blockbandedmatrices-src
+  - julia-git-blockdiagonals-src
   - julia-git-blosc-src
   - julia-git-blosc_jll-src
   - julia-git-boundaryvaluediffeq-src
@@ -188,6 +189,7 @@ repo_depends:
   - julia-git-filepathsbase-src
   - julia-git-fillarrays-src
   - julia-git-finitediff-src
+  - julia-git-finitedifferences-src
   - julia-git-fixedpointnumbers-src
   - julia-git-flamegraphs-src
   - julia-git-foldingtrees-src
@@ -477,6 +479,7 @@ repo_depends:
   - julia-git-resettablestacks-src
   - julia-git-reversediff-src
   - julia-git-revise-src
+  - julia-git-richardson-src
   - julia-git-rmath-src
   - julia-git-rmath_jll-src
   - julia-git-roots-src
@@ -527,6 +530,7 @@ repo_depends:
   - julia-git-stochasticdiffeq-src
   - julia-git-stridearrayscore-src
   - julia-git-strided-src
+  - julia-git-stridedviews-src
   - julia-git-stringdistances-src
   - julia-git-stringencodings-src
   - julia-git-stringmanipulation-src
@@ -667,6 +671,7 @@ update_on_build:
   - pkgbase: julia-git-bittwiddlingconveniencefunctions-src
   - pkgbase: julia-git-blockarrays-src
   - pkgbase: julia-git-blockbandedmatrices-src
+  - pkgbase: julia-git-blockdiagonals-src
   - pkgbase: julia-git-blosc-src
   - pkgbase: julia-git-blosc_jll-src
   - pkgbase: julia-git-boundaryvaluediffeq-src
@@ -780,6 +785,7 @@ update_on_build:
   - pkgbase: julia-git-filepathsbase-src
   - pkgbase: julia-git-fillarrays-src
   - pkgbase: julia-git-finitediff-src
+  - pkgbase: julia-git-finitedifferences-src
   - pkgbase: julia-git-fixedpointnumbers-src
   - pkgbase: julia-git-flamegraphs-src
   - pkgbase: julia-git-foldingtrees-src
@@ -1069,6 +1075,7 @@ update_on_build:
   - pkgbase: julia-git-resettablestacks-src
   - pkgbase: julia-git-reversediff-src
   - pkgbase: julia-git-revise-src
+  - pkgbase: julia-git-richardson-src
   - pkgbase: julia-git-rmath-src
   - pkgbase: julia-git-rmath_jll-src
   - pkgbase: julia-git-roots-src
@@ -1119,6 +1126,7 @@ update_on_build:
   - pkgbase: julia-git-stochasticdiffeq-src
   - pkgbase: julia-git-stridearrayscore-src
   - pkgbase: julia-git-strided-src
+  - pkgbase: julia-git-stridedviews-src
   - pkgbase: julia-git-stringdistances-src
   - pkgbase: julia-git-stringencodings-src
   - pkgbase: julia-git-stringmanipulation-src
