--- a/archlinuxcn/julia-git-precompiled-packages/PKGBUILD
+++ b/archlinuxcn/julia-git-precompiled-packages/PKGBUILD
@@ -33,6 +33,7 @@ _jlpackages=(
   BitTwiddlingConvenienceFunctions
   BlockArrays
   BlockBandedMatrices
+  BlockDiagonals
   Blosc
   Blosc_jll
   BoundaryValueDiffEq
@@ -146,6 +147,7 @@ _jlpackages=(
   FilePathsBase
   FillArrays
   FiniteDiff
+  FiniteDifferences
   FixedPointNumbers
   FlameGraphs
   FoldingTrees
@@ -441,6 +443,7 @@ _jlpackages=(
   ResettableStacks
   ReverseDiff
   Revise
+  Richardson
   Rmath
   Rmath_jll
   Roots
@@ -492,6 +495,7 @@ _jlpackages=(
   StochasticDiffEq
   StrideArraysCore
   Strided
+  StridedViews
   StringDistances
   StringEncodings
   StringManipulation
