[julia-git-jld] add

--- a/alarmcn/julia-git-precompiled-packages/lilac.yaml
+++ b/alarmcn/julia-git-precompiled-packages/lilac.yaml
@@ -537,6 +537,8 @@ update_on:
   - alias: alpm-lilac
     alpm: julia-git-jet-src
   - alias: alpm-lilac
+    alpm: julia-git-jld-src
+  - alias: alpm-lilac
     alpm: julia-git-jld2-src
   - alias: alpm-lilac
     alpm: julia-git-jlfzf-src
