--- a/archlinuxcn/julia-git-packages-meta/lilac.yaml
+++ b/archlinuxcn/julia-git-packages-meta/lilac.yaml
@@ -249,6 +249,7 @@ update_on_build:
   - pkgbase: julia-git-iteratorinterfaceextensions-src
   - pkgbase: julia-git-itertools-src
   - pkgbase: julia-git-jet-src
+  - pkgbase: julia-git-jld-src
   - pkgbase: julia-git-jld2-src
   - pkgbase: julia-git-jlfzf-src
   - pkgbase: julia-git-jpegturbo-src
