--- a/archlinuxcn/julia-git-precompiled-packages/lilac.yaml
+++ b/archlinuxcn/julia-git-precompiled-packages/lilac.yaml
@@ -286,6 +286,7 @@ repo_depends:
   - julia-git-iteratorinterfaceextensions-src
   - julia-git-itertools-src
   - julia-git-jet-src
+  - julia-git-jld-src
   - julia-git-jld2-src
   - julia-git-jlfzf-src
   - julia-git-jpegturbo-src
@@ -882,6 +883,7 @@ update_on_build:
   - pkgbase: julia-git-iteratorinterfaceextensions-src
   - pkgbase: julia-git-itertools-src
   - pkgbase: julia-git-jet-src
+  - pkgbase: julia-git-jld-src
   - pkgbase: julia-git-jld2-src
   - pkgbase: julia-git-jlfzf-src
   - pkgbase: julia-git-jpegturbo-src
