nekoray: add alpm/protobuf to update source

--- a/archlinuxcn/nekoray/lilac.yaml
+++ b/archlinuxcn/nekoray/lilac.yaml
@@ -20,3 +20,7 @@ update_on:
   - source: alpm
     alpm: abseil-cpp
     strip_release: true
+
+  - source: alpm
+    alpm: protobuf
+    strip_release: true
