--- a/archlinuxcn/julia-git-pycall-src/PKGBUILD
+++ b/archlinuxcn/julia-git-pycall-src/PKGBUILD
@@ -9,16 +9,8 @@ license=('MIT')
 makedepends=(git julia-pkg-scripts julia-git-conda-src julia-git-json-src
              julia-git-parsers-src julia-git-versionparsing-src)
 depends=(julia-git python)
-source=("git+https://github.com/JuliaPy/PyCall.jl.git#commit=$_commit"
-        0001-Fix-breakage-due-to-JuliaLang-julia-51319.patch)
-sha256sums=('SKIP'
-            'a94af190c371c7f0e5d71b11b418711ca6f898ec196117d74d2d84c965aa69a7')
-
-prepare() {
-  cd PyCall.jl
-
-  patch -Np1 --no-backup-if-mismatch < "../0001-Fix-breakage-due-to-JuliaLang-julia-51319.patch"
-}
+source=("git+https://github.com/JuliaPy/PyCall.jl.git#commit=$_commit")
+sha256sums=('SKIP')
 
 build() {
   cd PyCall.jl/deps
