--- a/alarmcn/extra-cmake-modules-git/PKGBUILD
+++ b/alarmcn/extra-cmake-modules-git/PKGBUILD
@@ -12,53 +12,55 @@ license=('LGPL')
 groups=('kf6')
 depends=('cmake')
 makedepends=(
-  'git'
-  'python-sphinx'
-  'python-requests'
+	'git'
+	'python-sphinx'
+	'python-requests'
 )
 checkdepends=(
-  'reuse'
-  'qt6-tools'
-  'qt6-base'
-  'qt6-declarative'
+	'reuse'
+	'qt6-tools'
+	'qt6-base'
+	'qt6-declarative'
 )
 conflicts=('extra-cmake-modules')
 provides=('extra-cmake-modules')
 optdepends=(
- 'python-pyxdg: to generate fastlane metadata for Android apps'
- 'python-requests: to generate fastlane metadata for Android apps'
- 'python-yaml: to generate fastlane metadata for Android apps'
- 'clang: for clang support'
+	'python-pyxdg: to generate fastlane metadata for Android apps'
+	'python-requests: to generate fastlane metadata for Android apps'
+	'python-yaml: to generate fastlane metadata for Android apps'
+	'clang: for clang support'
 )
 source=('git+https://invent.kde.org/frameworks/extra-cmake-modules.git')
 sha256sums=('SKIP')
 
 pkgver() {
-  cd extra-cmake-modules
-  _ver="$(cat CMakeLists.txt | grep -m1 'set(VERSION' | grep -o "[[:digit:]]*" | paste -sd'.')"
-  echo "${_ver}.r$(git rev-list --count HEAD).$(git rev-parse --short HEAD)"
+	cd extra-cmake-modules
+	_ver="$(cat CMakeLists.txt | grep -m1 'set(VERSION' | grep -o "[[:digit:]]*" | paste -sd'.')"
+	echo "${_ver}.r$(git rev-list --count HEAD).$(git rev-parse --short HEAD)"
 }
 
 prepare() {
-  sed 's|frameworks/||g' -i extra-cmake-modules/tests/KDEFetchTranslations/CMakeLists.txt
+	sed 's|frameworks/||g' -i extra-cmake-modules/tests/KDEFetchTranslations/CMakeLists.txt
 }
 
 build() {
-  cmake -S extra-cmake-modules -B build \
-    -DCMAKE_BUILD_TYPE=Release \
-    -DCMAKE_INSTALL_PREFIX=/usr \
-    -DBUILD_QTHELP_DOCS=ON \
-    -DBUILD_TESTING=ON \
-    -DQT_MAJOR_VERSION=6
+	export LC_ALL=C
 
-  cmake --build build
+	cmake -S extra-cmake-modules -B build \
+		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_INSTALL_PREFIX=/usr \
+		-DBUILD_QTHELP_DOCS=ON \
+		-DBUILD_TESTING=ON \
+		-DQT_MAJOR_VERSION=6
+
+	cmake --build build
 }
 
 check() {
-  cd build
-  ctest --output-on-failure -E ECMPoQmToolsTest
+	cd build
+	ctest --output-on-failure -E ECMPoQmToolsTest
 }
 
 package() {
-  DESTDIR="${pkgdir}" cmake --install build
+	DESTDIR="${pkgdir}" cmake --install build
 }
