--- a/archlinuxcn/mpich/lilac.yaml
+++ b/archlinuxcn/mpich/lilac.yaml
@@ -6,5 +6,5 @@ post_build: git_pkgbuild_commit
 
 update_on:
   - source: regex
-    regex: 'mpich-(\d+\.\d+[.0-9]*\d)'
+    regex: '/mpich-(\d+\.\d+[.0-9]*\d)\.tar'
     url: https://www.mpich.org/downloads/
