[dolphin-emu-git] Try to update

--- a/archlinuxcn/dolphin-emu-git/PKGBUILD
+++ b/archlinuxcn/dolphin-emu-git/PKGBUILD
@@ -72,6 +72,7 @@ build() {
 	# CMAKE_BUILD_TYPE - the dolphin-emu package in the repos uses 'None' for some reason, so we use it as well
 	# USE_SYSTEM_LIBS - we want to use system libs where possible
 	# USE_SYSTEM_LIBMGBA - the current version of mgba in the repos is not compatible with Dolphin
+    export LDFLAGS="-Wl,--copy-dt-needed-entries"
 	cd "$srcdir/$_sourcedirectory/"
 	cmake -S '.' -B 'build/' -G Ninja \
 		-DCMAKE_BUILD_TYPE=None \
