--- a/archlinuxcn/goldendict-ng-git/lilac.yaml
+++ b/archlinuxcn/goldendict-ng-git/lilac.yaml
@@ -12,5 +12,8 @@ update_on:
   - source: alpm
     alpm: ffmpeg
     provided: libavutil.so
+  - source: alpm
+    alpm: libzim
+    provided: libzim.so
   - source: manual
-    manual: 1
+    manual: 2
