--- a/alarmcn/deno/lilac.yaml
+++ b/alarmcn/deno/lilac.yaml
@@ -1,13 +1,12 @@
 maintainers:
   - github: yuyichao
 
-pre_build_script: update_pkgver_and_pkgrel(_G.newver.lstrip('v'))
 post_build: git_pkgbuild_commit
 
 update_on:
-  - source: github
-    github: denoland/deno
-    use_max_tag: true
-    include_regex: 'v[.0-9]*'
+  # Note that we need to get the official package and not the archlinux arm package
+  # (which doesn't exist yet) in this case.
+  - source: archpkg
+    alpm: deno
   - source: manual
-    manual: 1
+    manual: 2
