--- a/alarmcn/linux-orangepi-3b/lilac.yaml
+++ b/alarmcn/linux-orangepi-3b/lilac.yaml
@@ -2,11 +2,12 @@ maintainers:
   - github: Integral-Tech
     email: integral@murena.io
 
-pre_build_script: update_pkgver_and_pkgrel(_G.newver.replace('-','.'))
+pre_build_script: update_pkgver_and_pkgrel(_G.newver)
 post_build_script: git_pkgbuild_commit()
 
 update_on:
   - source: github
     github: torvalds/linux
     use_latest_tag: true
+    include_regex: "^((?!rc).)*$"
     prefix: v
