--- a/alarmcn/linux-orangepi-3b/lilac.yaml
+++ b/alarmcn/linux-orangepi-3b/lilac.yaml
@@ -9,5 +9,5 @@ update_on:
   - source: github
     github: torvalds/linux
     use_latest_tag: true
-    include_regex: "^((?!rc).)*$"
+    exclude_regex: "*rc*"
     prefix: v
