mpv-git: disable videotoolbox-pl
Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/archlinuxcn/mpv-git/PKGBUILD
+++ b/archlinuxcn/mpv-git/PKGBUILD
@@ -82,6 +82,7 @@ build() {
         '-Dcocoa=disabled' # macOS
         '-Daudiounit=disabled' # macOS
         '-Dvideotoolbox-gl=disabled' # macOS and iOS
+        '-Dvideotoolbox-pl=disabled' # macOS and iOS
         '-Dcoreaudio=disabled' # iOS
         '-Dios-gl=disabled' # iOS
         '-Dgl-dxinterop=disabled' # Windows
