alarmcn/linux-orangepi-3b: fix exclude_regex

--- a/alarmcn/linux-orangepi-3b/lilac.yaml
+++ b/alarmcn/linux-orangepi-3b/lilac.yaml
@@ -10,4 +10,4 @@ update_on:
     github: torvalds/linux
     use_max_tag: true
     prefix: v
-    exclude_regex: "*rc*"
+    exclude_regex: ".*rc.*"
