nm-tray-git: fix depends

--- a/archlinuxcn/nm-tray-git/PKGBUILD
+++ b/archlinuxcn/nm-tray-git/PKGBUILD
@@ -8,7 +8,7 @@ pkgdesc='Pure Qt NetworkManager front-end residing in panels'
 arch=('i686' 'x86_64')
 url='https://github.com/palinek/nm-tray'
 license=('GPL')
-depends=('networkmanager-qt')
+depends=('networkmanager-qt5')
 makedepends=('git' 'cmake' 'qt5-tools')
 provides=("$_pkgname")
 conflicts=("$_pkgname")
