--- a/archlinuxcn/python-pymssql/PKGBUILD
+++ b/archlinuxcn/python-pymssql/PKGBUILD
@@ -13,8 +13,11 @@ depends=(
 )
 makedepends=(
   cython
-  python-pip
+  python-build
+  python-installer
   python-setuptools
+  python-setuptools-scm
+  python-wheel
 )
 checkdepends=(
   python-gevent
@@ -24,11 +27,11 @@ checkdepends=(
   python-sqlalchemy
 )
 source=("${_pkgname}-${pkgver}.tar.gz::https://files.pythonhosted.org/packages/source/${_pkgname::1}/${_pkgname}/${_pkgname}-${pkgver}.tar.gz")
-sha512sums=('4d41280c356fee1b1215a081304d3d6ee6e8bef764968cc44634f274db0a771928f39626f718e300a6bbfea1e39b6174ddefcb084b2548ef44e4607c3b8c57aa')
+sha512sums=('c49cd40ed2fbbc99b77610675f0696f1a0f695401d547957e6742e8229eb3abffbc4bf0630ec6d7028d8289428754502c069c935c59af9a3c46811813fe94fef')
 
 build() {
   cd "${_pkgname}-${pkgver}"
-  python setup.py build
+  python -m build --wheel --no-isolation
 }
 
 check() {
@@ -39,6 +42,6 @@ check() {
 
 package() {
   cd "${_pkgname}-${pkgver}"
-  python setup.py install --root="${pkgdir}" --optimize=1 --skip-build
+  python -m installer --destdir="${pkgdir}" dist/*.whl
 }
 # vim:set ts=2 sw=2 et:
