--- a/archlinuxcn/python-apex-git/PKGBUILD
+++ b/archlinuxcn/python-apex-git/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Butui Hu <hot123tea123@gmail.com>
 
-_CUDA_ARCH_LIST="6.0;6.1;6.2;7.0;7.2;7.5;8.0;8.6;8.6;8.9;9.0;9.0+PTX"
+_CUDA_ARCH_LIST="6.0;6.1;6.2;7.0;7.2;7.5;8.0;8.6;8.9;9.0;9.0+PTX"
 pkgname=python-apex-git
 pkgver=22.05.r1137.6ff45486
 _pkgver=22.05
