--- a/archlinuxcn/ripgrep-skylake-git/PKGBUILD
+++ b/archlinuxcn/ripgrep-skylake-git/PKGBUILD
@@ -9,7 +9,7 @@ arch=('x86_64')
 url="https://github.com/BurntSushi/ripgrep"
 license=('MIT' 'UNLICENSE')
 depends=('gcc-libs' 'pcre2')
-makedepends=('cargo-nightly' 'git' 'asciidoctor')
+makedepends=('cargo-nightly' 'git')
 options=('debug')
 source=("https://github.com/BurntSushi/$pkgname/archive/$pkgver.tar.gz")
 source=("git+$url")
@@ -28,6 +28,10 @@ build () {
   cd ripgrep
   echo "lto = true" >> Cargo.toml
   RUSTFLAGS="-C target-cpu=skylake" cargo build --release --features pcre2
+  target/release/rg --generate complete-bash > complete.bash
+  target/release/rg --generate complete-zsh > complete.zsh
+  target/release/rg --generate complete-fish > complete.fish
+  target/release/rg --generate man > rg.1
   git checkout Cargo.toml
 }
 
@@ -36,10 +40,11 @@ package () {
 
   install -Dm755 "target/release/rg" "$pkgdir/usr/bin/rg"
 
-  install -Dm644 "target/release/build/ripgrep-"*/out/rg.bash "$pkgdir/usr/share/bash-completion/completions/rg"
-  install -Dm644 "complete/_rg" "$pkgdir/usr/share/zsh/site-functions/_rg"
+  install -Dm644 complete.bash "$pkgdir/usr/share/bash-completion/completions/rg"
+  install -Dm644 complete.zsh "$pkgdir/usr/share/zsh/site-functions/_rg"
+  install -Dm644 complete.fish "$pkgdir/usr/share/fish/vendor_completions.d/rg.fish"
+  install -Dm644 rg.1 "$pkgdir/usr/share/man/man1/rg.1"
 
-  install -Dm644 "target/release/build/ripgrep-"*/out/rg.1 "$pkgdir/usr/share/man/man1/rg.1"
   install -Dm644 "README.md" "$pkgdir/usr/share/doc/${pkgname}/README.md"
 
   install -Dm644 "COPYING" "$pkgdir/usr/share/licenses/${pkgname}/COPYING"
