--- a/archlinuxcn/ruby-backport/lilac.yaml
+++ b/archlinuxcn/ruby-backport/lilac.yaml
@@ -1,13 +1,10 @@
-pre_build_script: aur_pre_build(maintainers=['gyara'])
+pre_build_script: aur_pre_build(maintainers=['mnussbaum'])
 
 post_build: aur_post_build
 
-repo_depends:
-  - beancount
-
 update_on:
   - source: aur
-    aur: beancount-language-server
+    aur: ruby-backport
 
 maintainers:
   - github: CoelacanthusHex
