--- a/archlinuxcn/ruby-solargraph/lilac.yaml
+++ b/archlinuxcn/ruby-solargraph/lilac.yaml
@@ -5,9 +5,13 @@ post_build: aur_post_build
 repo_depends:
   - ruby-jaro_winkler
   - ruby-reverse_markdown
+  - ruby-e2mmap
+  - ruby-backport
 update_on_build:
   - pkgbase: ruby-jaro_winkler
   - pkgbase: ruby-reverse_markdown
+  - pkgbase: ruby-e2mmap
+  - pkgbase: ruby-backport
 
 update_on:
   - source: aur
@@ -16,6 +20,10 @@ update_on:
     alpm: ruby-jaro_winkler
   - alias: alpm-lilac
     alpm: ruby-reverse_markdown
+  - alias: alpm-lilac
+    alpm: ruby-e2mmap
+  - alias: alpm-lilac
+    alpm: ruby-backport
 
 maintainers:
   - github: CoelacanthusHex
