[Fixed] v2raya-git: change to default branch

--- a/archlinuxcn/v2raya-git/PKGBUILD
+++ b/archlinuxcn/v2raya-git/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: mzz2017 <mzz@tuta.io>
 
 pkgname=v2raya-git
-pkgver=20230914.r1437.b848b56
-pkgrel=2
+pkgver=20231122.r1474.93bbed1a
+pkgrel=1
 install=.INSTALL
 pkgdesc="v2rayA nightly version"
 arch=('i686' 'x86_64' 'armv7h' 'armv6h' 'aarch64')
@@ -13,7 +13,7 @@ makedepends=('git' 'go>=2:1.17.0-1' 'nodejs>=17' 'yarn')
 provides=('v2raya')
 conflicts=('v2raya')
 backup=("etc/default/v2raya")
-source=("$pkgname::git+$url#branch=feat_v5")
+source=("$pkgname::git+$url.git")
 sha512sums=('SKIP')
 
 
