mpv-git: fix build

--- a/archlinuxcn/mpv-git/PKGBUILD
+++ b/archlinuxcn/mpv-git/PKGBUILD
@@ -97,6 +97,7 @@ build() {
         '-Dwasapi=disabled' # Windows
         '-Dwin32-threads=disabled' # Windows
         '-Duwp=disabled' # Windows
+        '-Dvaapi-win32=disabled' # Windows
         '-Dopensles=disabled' # Android
         '-Degl-android=disabled' # Android
         '-Dandroid-media-ndk=disabled' # Android
