--- a/archlinuxcn/millet/lilac.yaml
+++ b/archlinuxcn/millet/lilac.yaml
@@ -1,10 +1,14 @@
-pre_build_script: aur_pre_build(maintainers=['kopecs'])
+pre_build_script: |
+    update_pkgver_and_pkgrel(_G.newver)
 
-post_build: aur_post_build
+post_build_script: |
+    git_pkgbuild_commit()
 
 update_on:
-  - source: aur
-    aur: millet
+  - source: github
+    github: azdavis/millet
+    prefix: v
+    use_latest_release: true
 
 maintainers:
   - github: CoelacanthusHex
