--- a/archlinuxcn/qefientrymanager-git/lilac.yaml
+++ b/archlinuxcn/qefientrymanager-git/lilac.yaml
@@ -6,7 +6,9 @@ pre_build_script: |
   update_pkgrel()
   vcs_update()
 
-post_build_script: git_pkgbuild_commit()
+post_build_script: |
+  git_pkgbuild_commit()
+  update_aur_repo()
 
 update_on:
   - source: github
