globalplatform: use include_prereleases_as_tagname to avoid release title

--- a/archlinuxcn/globalplatformpro/lilac.yaml
+++ b/archlinuxcn/globalplatformpro/lilac.yaml
@@ -9,7 +9,7 @@ update_on:
     github: martinpaljak/GlobalPlatformPro
     prefix: v
     use_latest_release: true
-    include_prereleases: true
+    include_prereleases_as_tagname: true
 
 maintainers:
   - github: CoelacanthusHex
