alarmcn/linux-orangepi-3b: add cpio to makedepends

--- a/alarmcn/linux-orangepi-3b/PKGBUILD
+++ b/alarmcn/linux-orangepi-3b/PKGBUILD
@@ -9,7 +9,7 @@ _desc="AArch64 multi-platform"
 arch=('aarch64')
 url="http://www.kernel.org/"
 license=('GPL2')
-makedepends=('xmlto' 'docbook-xsl' 'kmod' 'inetutils' 'bc' 'git' 'dtc')
+makedepends=('xmlto' 'docbook-xsl' 'kmod' 'inetutils' 'bc' 'git' 'dtc' 'cpio')
 options=('!strip')
 source=("${_srcname}.tar.gz::https://cdn.kernel.org/pub/linux/kernel/v6.x/${_srcname}.tar.gz"
   '1001-arm64-dts-rockchip-add-opi3b.patch'
