hyprland-git: add replaces hyprland-nvidia-git

--- a/archlinuxcn/hyprland-git/PKGBUILD
+++ b/archlinuxcn/hyprland-git/PKGBUILD
@@ -52,6 +52,7 @@ makedepends=(cmake
 	xorgproto)
 provides=("hyprland=${pkgver%%.r*}")
 conflicts=(hyprland)
+replaces=(hyprland-nvidia-git)
 source=("git+https://github.com/hyprwm/Hyprland.git"
 	"git+https://gitlab.freedesktop.org/wlroots/wlroots.git"
 	"git+https://github.com/hyprwm/hyprland-protocols.git"
