--- a/archlinuxcn/swww-git/lilac.yaml
+++ b/archlinuxcn/swww-git/lilac.yaml
@@ -2,11 +2,12 @@ maintainers:
   - github: Integral-Tech
     email: integral@murena.io
 
-pre_build_script: update_pkgver_and_pkgrel(_G.newver)
+pre_build_script: |
+  update_pkgrel()
+  vcs_update()
+
 post_build_script: git_pkgbuild_commit()
 
 update_on:
   - source: github
     github: Horus645/swww
-    use_latest_release: true
-    prefix: v
