--- a/alarmcn/python-pillow-avif-plugin/lilac.yaml
+++ b/alarmcn/python-pillow-avif-plugin/lilac.yaml
@@ -9,5 +9,6 @@ update_on:
     github: fdintino/pillow-avif-plugin
     use_latest_tag: true
     include_regex: 'v\d+\.\d+\.\d+'
+  - alias: python
   - source: manual
     manual: 1
