--- a/alarmcn/python-pillow-heif/lilac.yaml
+++ b/alarmcn/python-pillow-heif/lilac.yaml
@@ -9,5 +9,6 @@ update_on:
     github: bigcat88/pillow_heif
     use_latest_tag: true
     include_regex: 'v\d+\.\d+\.\d+'
+  - alias: python
   - source: manual
     manual: 1
