--- a/archlinuxcn/riscv64-unknown-elf-gcc/PKGBUILD
+++ b/archlinuxcn/riscv64-unknown-elf-gcc/PKGBUILD
@@ -73,6 +73,7 @@ build() {
     --disable-threads \
     --disable-werror \
     --enable-tls \
+    --with-arch=rv64gc_zifencei \
     --with-gnu-as \
     --with-gnu-ld \
     --with-system-zlib \
