--- a/archlinuxcn/riscv64-unknown-elf-gcc/lilac.yaml
+++ b/archlinuxcn/riscv64-unknown-elf-gcc/lilac.yaml
@@ -5,6 +5,9 @@ maintainers:
 pre_build_script: update_pkgver_and_pkgrel(_G.newver)
 post_build_script: git_pkgbuild_commit()
 
+repo_depends:
+  - riscv64-unknown-elf-binutils
+
 update_on:
   - source: alpm
     alpm: gcc
