riscv64-unknown-elf-gcc: fix typo in package()

--- a/archlinuxcn/riscv64-unknown-elf-gcc/PKGBUILD
+++ b/archlinuxcn/riscv64-unknown-elf-gcc/PKGBUILD
@@ -99,5 +99,5 @@ package() {
 	# Remove files that conflict with host gcc package
 	rm -r "${pkgdir}/usr/share/man/man7"
 	rm -r "${pkgdir}/usr/share/info"
-	rm "${pkgdir}/usr/lib/libcc1.*"
+	rm ${pkgdir}/usr/lib/libcc1.*
 }
