--- a/archlinuxcn/globalplatformpro-git/PKGBUILD
+++ b/archlinuxcn/globalplatformpro-git/PKGBUILD
@@ -8,7 +8,7 @@ pkgdesc="Manage applets and keys on JavaCard-s like a pro"
 arch=('any')
 url="https://github.com/martinpaljak/GlobalPlatformPro"
 license=('LGPL3')
-depends=('java-runtime-headless=17' 'pcsclite')
+depends=('java-runtime-headless>=17' 'pcsclite')
 makedepends=('git' 'java-environment=17' 'maven' 'which')
 conflicts=('globalplatformpro')
 provides=('globalplatformpro')
